<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".ui.neighbour_add.AddNeighbourActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".neighbour_list.neighbour_add.AddNeighbourActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/avatar" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneNumberLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/webSiteLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/webSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/website"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/aboutMeLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/aboutMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="4"
                    android:minLines="4"
                    android:ems="10"
                    android:hint="@string/about_me"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/create"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_gravity="center"
                app:cornerRadius="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/save"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>