<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".ui.neighbour_profile.ProfileNeighbourActivity">

    <FrameLayout
        android:id="@+id/frameLayoutNeighbourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.neighbour_profile.ProfileNeighbourActivity">

        <!-- Neigbour Details -->
        <ImageView
            android:id="@+id/item_profile_avatar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:src="@color/cardview_dark_background"
            android:contentDescription="@string/avatar" />

        <TextView
            android:id="@+id/item_pic_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="140dp"
            android:layout_marginStart="16dp"
            android:textSize="30sp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/notDefinedText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="#fff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:text="@string/notDefinedText" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="#ebeff0"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/infos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="#fff"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_location_on_24"
                    android:contentDescription="@string/location" />

                <TextView
                    android:id="@+id/item_profile_address"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:text="@string/notDefinedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="#fff"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_call_24"
                    android:contentDescription="@string/phone" />

                <TextView
                    android:id="@+id/item_profile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:text="@string/notDefinedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="#fff"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_language_24"
                    android:contentDescription="@string/website" />

                <TextView
                    android:id="@+id/item_profile_website"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp"
                    android:text="@string/notDefinedText" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="400dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="#fff"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:text="@string/about_myself" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="#ebeff0"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/infos" />

            <TextView
                android:id="@+id/item_aboutme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp"
                android:text="@string/notDefinedText" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/favorite"
            app:backgroundTint="@color/transparent"
            app:elevation="100dp"
            android:elevation="100dp"
            app:borderWidth="0dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fav_neighbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="16dp"
            app:backgroundTint="@color/white"
            app:srcCompat="@drawable/ic_baseline_star_24"
            android:contentDescription="@string/favorite" />

    </FrameLayout>

</ScrollView>